locations spring solution week #1